@@ -22,7 +22,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.PrintStream;
 import java.net.Socket;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.Arrays;
@@ -36,6 +36,7 @@ import java.util.Scanner;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import org.apache.commons.cli.CommandLine;
+import org.apache.commons.cli.DeprecatedAttributes;
 import org.apache.commons.cli.Option;
 import org.apache.commons.exec.DefaultExecuteResultHandler;
 import org.apache.commons.exec.DefaultExecutor;
@@ -93,101 +94,113 @@ public class RunExampleTool extends ToolBase {
   @Override
   public List<Option> getOptions() {
     return List.of(
-        Option.builder("noprompt")
+        Option.builder()
+            .longOpt("no-prompt")
+            .required(false)
+            .desc(
+                "Don't prompt for input; accept all defaults when running examples that accept user input.")
+            .build(),
+        Option.builder()
+            .longOpt("noprompt")
+            .deprecated(
+                DeprecatedAttributes.builder()
+                    .setForRemoval(true)
+                    .setSince("9.7")
+                    .setDescription("Use --no-prompt instead")
+                    .get())
             .required(false)
             .desc(
                 "Don't prompt for input; accept all defaults when running examples that accept user input.")
             .build(),
         Option.builder("e")
-            .argName("NAME")
+            .longOpt("example")
             .hasArg()
+            .argName("NAME")
             .required(true)
             .desc("Name of the example to launch, one of: cloud, techproducts, schemaless, films.")
-            .longOpt("example")
             .build(),
-        Option.builder("script")
-            .argName("PATH")
+        Option.builder()
+            .longOpt("script")
             .hasArg()
+            .argName("PATH")
             .required(false)
             .desc("Path to the bin/solr script.")
             .build(),
         Option.builder("d")
-            .argName("DIR")
+            .longOpt("server-dir")
             .hasArg()
+            .argName("DIR")
             .required(true)
             .desc("Path to the Solr server directory.")
-            .longOpt("serverDir")
             .build(),
-        Option.builder("force")
+        Option.builder("f")
+            .longOpt("force")
             .argName("FORCE")
             .desc("Force option in case Solr is run as root.")
             .build(),
-        Option.builder("exampleDir")
-            .argName("DIR")
+        Option.builder()
+            .longOpt("example-dir")
             .hasArg()
+            .argName("DIR")
             .required(false)
             .desc(
                 "Path to the Solr example directory; if not provided, ${serverDir}/../example is expected to exist.")
             .build(),
-        Option.builder("urlScheme")
-            .argName("SCHEME")
+        Option.builder()
+            .longOpt("url-scheme")
             .hasArg()
+            .argName("SCHEME")
             .required(false)
             .desc("Solr URL scheme: http or https, defaults to http if not specified.")
             .build(),
         Option.builder("p")
-            .argName("PORT")
+            .longOpt("port")
             .hasArg()
+            .argName("PORT")
             .required(false)
             .desc("Specify the port to start the Solr HTTP listener on; default is 8983.")
-            .longOpt("port")
             .build(),
-        Option.builder("h")
-            .argName("HOSTNAME")
+        Option.builder()
+            .longOpt("host")
             .hasArg()
+            .argName("HOSTNAME")
             .required(false)
             .desc("Specify the hostname for this Solr instance.")
-            .longOpt("host")
-            .build(),
-        Option.builder("z")
-            .argName("ZKHOST")
-            .hasArg()
-            .required(false)
-            .desc("ZooKeeper connection string; only used when running in SolrCloud mode using -c.")
-            .longOpt("zkhost")
             .build(),
         Option.builder("c")
+            .longOpt("cloud")
             .required(false)
             .desc(
                 "Start Solr in SolrCloud mode; if -z not supplied, an embedded ZooKeeper instance is started on Solr port+1000, such as 9983 if Solr is bound to 8983.")
-            .longOpt("cloud")
             .build(),
         Option.builder("m")
-            .argName("MEM")
+            .longOpt("memory")
             .hasArg()
+            .argName("MEM")
             .required(false)
             .desc(
                 "Sets the min (-Xms) and max (-Xmx) heap size for the JVM, such as: -m 4g results in: -Xms4g -Xmx4g; by default, this script sets the heap size to 512m.")
-            .longOpt("memory")
             .build(),
-        Option.builder("a")
-            .argName("OPTS")
+        Option.builder()
+            .longOpt("jvm-opts")
             .hasArg()
+            .argName("OPTS")
             .required(false)
             .desc(
                 "Additional options to be passed to the JVM when starting example Solr server(s).")
-            .longOpt("addlopts")
-            .build());
+            .build(),
+        SolrCLI.OPTION_ZKHOST,
+        SolrCLI.OPTION_ZKHOST_DEPRECATED);
   }
 
   @Override
   public void runImpl(CommandLine cli) throws Exception {
-    this.urlScheme = cli.getOptionValue("urlScheme", "http");
+    this.urlScheme = cli.getOptionValue("url-scheme", "http");
 
-    serverDir = new File(cli.getOptionValue("serverDir"));
+    serverDir = new File(cli.getOptionValue("server-dir"));
     if (!serverDir.isDirectory())
       throw new IllegalArgumentException(
-          "Value of -serverDir option is invalid! "
+          "Value of --server-dir option is invalid! "
               + serverDir.getAbsolutePath()
               + " is not a directory!");
 
@@ -195,7 +208,7 @@ public class RunExampleTool extends ToolBase {
     if (script != null) {
       if (!(new File(script)).isFile())
         throw new IllegalArgumentException(
-            "Value of -script option is invalid! " + script + " not found");
+            "Value of --script option is invalid! " + script + " not found");
     } else {
       File scriptFile = new File(serverDir.getParentFile(), "bin/solr");
       if (scriptFile.isFile()) {
@@ -206,18 +219,18 @@ public class RunExampleTool extends ToolBase {
           script = scriptFile.getAbsolutePath();
         } else {
           throw new IllegalArgumentException(
-              "Cannot locate the bin/solr script! Please pass -script to this application.");
+              "Cannot locate the bin/solr script! Please pass --script to this application.");
         }
       }
     }
 
     exampleDir =
-        (cli.hasOption("exampleDir"))
-            ? new File(cli.getOptionValue("exampleDir"))
+        (cli.hasOption("example-dir"))
+            ? new File(cli.getOptionValue("example-dir"))
             : new File(serverDir.getParent(), "example");
     if (!exampleDir.isDirectory())
       throw new IllegalArgumentException(
-          "Value of -exampleDir option is invalid! "
+          "Value of --example-dir option is invalid! "
               + exampleDir.getAbsolutePath()
               + " is not a directory!");
 
@@ -227,8 +240,7 @@ public class RunExampleTool extends ToolBase {
             + ",\nexampleDir="
             + exampleDir.getAbsolutePath()
             + "\nscript="
-            + script,
-        cli);
+            + script);
 
     String exampleType = cli.getOptionValue("example");
     if ("cloud".equals(exampleType)) {
@@ -253,52 +265,59 @@ public class RunExampleTool extends ToolBase {
 
     boolean isCloudMode = cli.hasOption('c');
     String zkHost = cli.getOptionValue('z');
-    int port = Integer.parseInt(cli.getOptionValue('p', "8983"));
+    int port =
+        Integer.parseInt(
+            cli.getOptionValue('p', System.getenv().getOrDefault("SOLR_PORT", "8983")));
     Map<String, Object> nodeStatus =
         startSolr(new File(exDir, "solr"), isCloudMode, cli, port, zkHost, 30);
 
-    // invoke the CreateTool
-    File configsetsDir = new File(serverDir, "solr/configsets");
-
     String solrUrl = (String) nodeStatus.get("baseUrl");
 
-    // safe check if core / collection already exists
+    // If the example already exists then let the user know they should delete it, or
+    // they may get unusual behaviors.
     boolean alreadyExists = false;
-    if (nodeStatus.get("cloud") != null) {
-      if (SolrCLI.safeCheckCollectionExists(solrUrl, collectionName)) {
+    boolean cloudMode = nodeStatus.get("cloud") != null;
+    if (cloudMode) {
+      if (SolrCLI.safeCheckCollectionExists(
+          solrUrl, collectionName, cli.getOptionValue(SolrCLI.OPTION_CREDENTIALS.getLongOpt()))) {
         alreadyExists = true;
         echo(
             "\nWARNING: Collection '"
                 + collectionName
-                + "' already exists!\nChecked collection existence using Collections API");
+                + "' already exists, which may make starting this example not work well!");
       }
     } else {
       String coreName = collectionName;
-      if (SolrCLI.safeCheckCoreExists(solrUrl, coreName)) {
+      if (SolrCLI.safeCheckCoreExists(
+          solrUrl, coreName, cli.getOptionValue(SolrCLI.OPTION_CREDENTIALS.getLongOpt()))) {
         alreadyExists = true;
         echo(
             "\nWARNING: Core '"
                 + coreName
-                + "' already exists!\nChecked core existence using Core API command");
+                + "' already exists, which may make starting this example not work well!");
       }
     }
 
+    if (alreadyExists) {
+      echo(
+          "You may want to run 'bin/solr delete -c "
+              + collectionName
+              + "' first before running the example to ensure a fresh state.");
+    }
+
     if (!alreadyExists) {
+      // invoke the CreateTool
       String[] createArgs =
           new String[] {
-            "-name", collectionName,
-            "-shards", "1",
-            "-replicationFactor", "1",
-            "-confname", collectionName,
-            "-confdir", configSet,
-            "-configsetsDir", configsetsDir.getAbsolutePath(),
-            "-solrUrl", solrUrl
+            "--name", collectionName,
+            "--shards", "1",
+            "--replication-factor", "1",
+            "--conf-name", collectionName,
+            "--conf-dir", configSet,
+            "--solr-url", solrUrl
           };
       CreateTool createTool = new CreateTool(stdout);
-      int createCode =
-          createTool.runTool(
-              SolrCLI.processCommandLineArgs(
-                  createTool.getName(), createTool.getOptions(), createArgs));
+      int createCode = createTool.runTool(SolrCLI.processCommandLineArgs(createTool, createArgs));
       if (createCode != 0)
         throw new Exception(
             "Failed to create " + collectionName + " using command: " + Arrays.asList(createArgs));
@@ -321,16 +340,14 @@ public class RunExampleTool extends ToolBase {
         String[] args =
             new String[] {
               "post",
-              "-commit",
-              "-url",
+              "--solr-update-url",
               updateUrl,
-              "-type",
+              "--type",
               "application/xml",
               exampledocsDir.getAbsolutePath() + "/*.xml"
             };
         PostTool postTool = new PostTool();
-        CommandLine postToolCli =
-            SolrCLI.parseCmdLine(postTool.getName(), args, postTool.getOptions());
+        CommandLine postToolCli = SolrCLI.parseCmdLine(postTool, args);
         postTool.runTool(postToolCli);
 
       } else {
@@ -339,7 +356,7 @@ public class RunExampleTool extends ToolBase {
       }
     } else if ("films".equals(exampleName) && !alreadyExists) {
       try (SolrClient solrClient = new Http2SolrClient.Builder(solrUrl).build()) {
-        echo("Adding dense vector field type to films schema \"_default\"");
+        echo("Adding dense vector field type to films schema");
         SolrCLI.postJsonToSolr(
             solrClient,
             "/" + collectionName + "/schema",
@@ -353,8 +370,7 @@ public class RunExampleTool extends ToolBase {
                 + "        }\n"
                 + "      }");
 
-        echo(
-            "Adding name, initial_release_date, and film_vector fields to films schema \"_default\"");
+        echo("Adding name, initial_release_date, and film_vector fields to films schema");
         SolrCLI.postJsonToSolr(
             solrClient,
             "/" + collectionName + "/schema",
@@ -405,18 +421,14 @@ public class RunExampleTool extends ToolBase {
         String[] args =
             new String[] {
               "post",
-              "-commit",
-              "-url",
+              "--solr-update-url",
               updateUrl,
-              "-type",
+              "--type",
               "application/json",
-              "-filetypes",
-              "json",
-              exampleDir.toString()
+              filmsJsonFile.getAbsolutePath()
             };
         PostTool postTool = new PostTool();
-        CommandLine postToolCli =
-            SolrCLI.parseCmdLine(postTool.getName(), args, postTool.getOptions());
+        CommandLine postToolCli = SolrCLI.parseCmdLine(postTool, args);
         postTool.runTool(postToolCli);
 
       } catch (Exception ex) {
@@ -434,9 +446,16 @@ public class RunExampleTool extends ToolBase {
 
   protected void runCloudExample(CommandLine cli) throws Exception {
 
-    boolean prompt = !cli.hasOption("noprompt");
+    boolean prompt = !(cli.hasOption("no-prompt") || cli.hasOption("noprompt"));
     int numNodes = 2;
     int[] cloudPorts = new int[] {8983, 7574, 8984, 7575};
+    int defaultPort =
+        Integer.parseInt(
+            cli.getOptionValue('p', System.getenv().getOrDefault("SOLR_PORT", "8983")));
+    if (defaultPort != 8983) {
+      // Override the old default port numbers if user has started the example overriding SOLR_PORT
+      cloudPorts = new int[] {defaultPort, defaultPort + 1, defaultPort + 2, defaultPort + 3};
+    }
     File cloudDir = new File(exampleDir, "cloud");
     if (!cloudDir.isDirectory()) cloudDir.mkdir();
 
@@ -477,7 +496,7 @@ public class RunExampleTool extends ToolBase {
         }
 
         cloudPorts[n] = port;
-        echoIfVerbose("Using port " + port + " for node " + (n + 1), cli);
+        echoIfVerbose("Using port " + port + " for node " + (n + 1));
       }
     } else {
       echo("Starting up " + numNodes + " Solr nodes for your example SolrCloud cluster.\n");
@@ -527,7 +546,13 @@ public class RunExampleTool extends ToolBase {
     waitToSeeLiveNodes(zkHost, numNodes);
 
     // create the collection
-    String collectionName = createCloudExampleCollection(numNodes, readInput, prompt, solrUrl);
+    String collectionName =
+        createCloudExampleCollection(
+            numNodes,
+            readInput,
+            prompt,
+            solrUrl,
+            cli.getOptionValue(SolrCLI.OPTION_CREDENTIALS.getLongOpt()));
 
     echo("\n\nSolrCloud example running, please visit: " + solrUrl + " \n");
   }
@@ -581,18 +606,19 @@ public class RunExampleTool extends ToolBase {
 
     String extraArgs = readExtraArgs(cli.getArgs());
 
-    String host = cli.getOptionValue('h');
+    String host = cli.getOptionValue("host");
     String memory = cli.getOptionValue('m');
 
-    String hostArg = (host != null && !"localhost".equals(host)) ? " -h " + host : "";
+    String hostArg = (host != null && !"localhost".equals(host)) ? " --host " + host : "";
     String zkHostArg = (zkHost != null) ? " -z " + zkHost : "";
     String memArg = (memory != null) ? " -m " + memory : "";
-    String cloudModeArg = cloudMode ? "-cloud " : "";
-    String forceArg = cli.hasOption("force") ? " -force" : "";
+    String cloudModeArg = cloudMode ? "--cloud " : "";
+    String forceArg = cli.hasOption("force") ? " --force" : "";
     String verboseArg = verbose ? "-V" : "";
 
-    String addlOpts = cli.getOptionValue('a');
-    String addlOptsArg = (addlOpts != null) ? " -a \"" + addlOpts + "\"" : "";
+    String jvmOpts =
+        cli.hasOption("jvm-opts") ? cli.getOptionValue("jvm-opts") : cli.getOptionValue('a');
+    String jvmOptsArg = (jvmOpts != null) ? " --jvm-opts \"" + jvmOpts + "\"" : "";
 
     File cwd = new File(System.getProperty("user.dir"));
     File binDir = (new File(script)).getParentFile();
@@ -610,7 +636,7 @@ public class RunExampleTool extends ToolBase {
     String startCmd =
         String.format(
             Locale.ROOT,
-            "\"%s\" start %s -p %d -s \"%s\" %s %s %s %s %s %s %s",
+            "\"%s\" start %s -p %d --solr-home \"%s\" %s %s %s %s %s %s %s",
             callScript,
             cloudModeArg,
             port,
@@ -621,7 +647,7 @@ public class RunExampleTool extends ToolBase {
             forceArg,
             verboseArg,
             extraArgs,
-            addlOptsArg);
+            jvmOptsArg);
     startCmd = startCmd.replaceAll("\\s+", " ").trim(); // for pretty printing
 
     echo("\nStarting up Solr on port " + port + " using command:");
@@ -631,7 +657,9 @@ public class RunExampleTool extends ToolBase {
         String.format(
             Locale.ROOT, "%s://%s:%d/solr", urlScheme, (host != null ? host : "localhost"), port);
 
-    Map<String, Object> nodeStatus = checkPortConflict(solrUrl, solrHomeDir, port);
+    String credentials = null; // for now we don't need it for example tool.  But we should.
+
+    Map<String, Object> nodeStatus = checkPortConflict(solrUrl, credentials, solrHomeDir, port);
     if (nodeStatus != null)
       return nodeStatus; // the server they are trying to start is already running
 
@@ -678,16 +706,18 @@ public class RunExampleTool extends ToolBase {
     }
     if (code != 0) throw new Exception("Failed to start Solr using command: " + startCmd);
 
-    return getNodeStatus(solrUrl, maxWaitSecs);
+    return getNodeStatus(
+        solrUrl, cli.getOptionValue(SolrCLI.OPTION_CREDENTIALS.getLongOpt()), maxWaitSecs);
   }
 
-  protected Map<String, Object> checkPortConflict(String solrUrl, File solrHomeDir, int port) {
+  protected Map<String, Object> checkPortConflict(
+      String solrUrl, String credentials, File solrHomeDir, int port) {
     // quickly check if the port is in use
     if (isPortAvailable(port)) return null; // not in use ... try to start
 
     Map<String, Object> nodeStatus = null;
     try {
-      nodeStatus = (new StatusTool()).getStatus(solrUrl);
+      nodeStatus = (new StatusTool()).getStatus(solrUrl, credentials);
     } catch (Exception ignore) {
       /* just trying to determine if this example is already running. */
     }
@@ -736,7 +766,8 @@ public class RunExampleTool extends ToolBase {
   }
 
   protected String createCloudExampleCollection(
-      int numNodes, Scanner readInput, boolean prompt, String solrUrl) throws Exception {
+      int numNodes, Scanner readInput, boolean prompt, String solrUrl, String credentials)
+      throws Exception {
     // yay! numNodes SolrCloud nodes running
     int numShards = 2;
     int replicationFactor = 2;
@@ -760,7 +791,7 @@ public class RunExampleTool extends ToolBase {
 
         // Test for existence and then prompt to either create another collection or skip the
         // creation step
-        if (SolrCLI.safeCheckCollectionExists(solrUrl, collectionName)) {
+        if (SolrCLI.safeCheckCollectionExists(solrUrl, credentials, collectionName)) {
           echo("\nCollection '" + collectionName + "' already exists!");
           int oneOrTwo =
               promptForInt(
@@ -816,7 +847,7 @@ public class RunExampleTool extends ToolBase {
       }
     } else {
       // must verify if default collection exists
-      if (SolrCLI.safeCheckCollectionExists(solrUrl, collectionName)) {
+      if (SolrCLI.safeCheckCollectionExists(solrUrl, collectionName, credentials)) {
         echo(
             "\nCollection '"
                 + collectionName
@@ -828,20 +859,16 @@ public class RunExampleTool extends ToolBase {
     // invoke the CreateTool
     String[] createArgs =
         new String[] {
-          "-name", collectionName,
-          "-shards", String.valueOf(numShards),
-          "-replicationFactor", String.valueOf(replicationFactor),
-          "-confname", collectionName,
-          "-confdir", cloudConfig,
-          "-configsetsDir", configsetsDir.getAbsolutePath(),
-          "-solrUrl", solrUrl
+          "--name", collectionName,
+          "--shards", String.valueOf(numShards),
+          "--replication-factor", String.valueOf(replicationFactor),
+          "--conf-name", collectionName,
+          "--conf-dir", cloudConfig,
+          "--solr-url", solrUrl
         };
 
     CreateTool createTool = new CreateTool(stdout);
-    int createCode =
-        createTool.runTool(
-            SolrCLI.processCommandLineArgs(
-                createTool.getName(), createTool.getOptions(), createArgs));
+    int createCode = createTool.runTool(SolrCLI.processCommandLineArgs(createTool, createArgs));
 
     if (createCode != 0)
       throw new Exception(
@@ -859,25 +886,21 @@ public class RunExampleTool extends ToolBase {
     return configDir.isDirectory();
   }
 
-  protected Map<String, Object> getNodeStatus(String solrUrl, int maxWaitSecs) throws Exception {
+  protected Map<String, Object> getNodeStatus(String solrUrl, String credentials, int maxWaitSecs)
+      throws Exception {
     StatusTool statusTool = new StatusTool();
-    if (verbose) echo("\nChecking status of Solr at " + solrUrl + " ...");
+    echoIfVerbose("\nChecking status of Solr at " + solrUrl + " ...");
 
-    URL solrURL = new URL(solrUrl);
+    URI solrURI = new URI(solrUrl);
     Map<String, Object> nodeStatus =
-        statusTool.waitToSeeSolrUp(solrUrl, maxWaitSecs, TimeUnit.SECONDS);
+        statusTool.waitToSeeSolrUp(solrUrl, credentials, maxWaitSecs, TimeUnit.SECONDS);
     nodeStatus.put("baseUrl", solrUrl);
     CharArr arr = new CharArr();
     new JSONWriter(arr, 2).write(nodeStatus);
     String mode = (nodeStatus.get("cloud") != null) ? "cloud" : "standalone";
-    if (verbose)
-      echo(
-          "\nSolr is running on "
-              + solrURL.getPort()
-              + " in "
-              + mode
-              + " mode with status:\n"
-              + arr);
+
+    echoIfVerbose(
+        "\nSolr is running on " + solrURI.getPort() + " in " + mode + " mode with status:\n" + arr);
 
     return nodeStatus;
   }
@@ -887,12 +910,12 @@ public class RunExampleTool extends ToolBase {
     File solrXml = new File(serverDir, "solr/solr.xml");
     if (!solrXml.isFile())
       throw new IllegalArgumentException(
-          "Value of -serverDir option is invalid! " + solrXml.getAbsolutePath() + " not found!");
+          "Value of --server-dir option is invalid! " + solrXml.getAbsolutePath() + " not found!");
 
     File zooCfg = new File(serverDir, "solr/zoo.cfg");
     if (!zooCfg.isFile())
       throw new IllegalArgumentException(
-          "Value of -serverDir option is invalid! " + zooCfg.getAbsolutePath() + " not found!");
+          "Value of --server-dir option is invalid! " + zooCfg.getAbsolutePath() + " not found!");
 
     File solrHomeDir = new File(exampleParentDir, dirName + "/solr");
     if (!solrHomeDir.isDirectory()) {
