@@ -17,6 +17,7 @@
 
 package org.apache.solr.packagemanager;
 
+import static org.apache.solr.cli.SolrCLI.printGreen;
 import static org.apache.solr.common.params.CommonParams.SYSTEM_INFO_PATH;
 import static org.apache.solr.packagemanager.PackageUtils.getMapper;
 
@@ -24,8 +25,9 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
 import java.lang.invoke.MethodHandles;
-import java.net.URL;
+import java.net.URI;
 import java.nio.ByteBuffer;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -37,11 +39,13 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.stream.Collectors;
+import org.apache.solr.cli.SolrCLI;
 import org.apache.solr.client.api.util.SolrVersion;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.request.GenericSolrRequest;
+import org.apache.solr.client.solrj.request.GenericV2SolrRequest;
 import org.apache.solr.client.solrj.request.RequestWriter;
 import org.apache.solr.client.solrj.request.beans.PackagePayload;
 import org.apache.solr.common.SolrException;
@@ -49,8 +53,8 @@ import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.cloud.SolrZkClient;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.util.NamedList;
-import org.apache.solr.core.BlobRepository;
-import org.apache.solr.filestore.PackageStoreAPI;
+import org.apache.solr.common.util.Utils;
+import org.apache.solr.filestore.ClusterFileStore;
 import org.apache.solr.packagemanager.SolrPackage.Artifact;
 import org.apache.solr.packagemanager.SolrPackage.SolrPackageRelease;
 import org.apache.solr.pkg.PackageAPI;
@@ -122,17 +126,17 @@ public class RepositoryManager {
     if (packageManager.zkClient.exists(PackageUtils.REPOSITORIES_ZK_PATH, true) == false) {
       packageManager.zkClient.create(
           PackageUtils.REPOSITORIES_ZK_PATH,
-          getMapper().writeValueAsString(repos).getBytes("UTF-8"),
+          getMapper().writeValueAsString(repos).getBytes(StandardCharsets.UTF_8),
           CreateMode.PERSISTENT,
           true);
     } else {
       packageManager.zkClient.setData(
           PackageUtils.REPOSITORIES_ZK_PATH,
-          getMapper().writeValueAsString(repos).getBytes("UTF-8"),
+          getMapper().writeValueAsString(repos).getBytes(StandardCharsets.UTF_8),
           true);
     }
 
-    try (InputStream is = new URL(uri + "/publickey.der").openStream()) {
+    try (InputStream is = new URI(uri + "/publickey.der").toURL().openStream()) {
       addKey(is.readAllBytes(), repoName + ".der");
     }
   }
@@ -145,9 +149,9 @@ public class RepositoryManager {
     String solrHome = (String) systemInfo.get("solr_home");
 
     // put the public key into package store's trusted key store and request a sync.
-    String path = PackageStoreAPI.KEYS_DIR + "/" + destinationKeyFilename;
+    String path = ClusterFileStore.KEYS_DIR + "/" + destinationKeyFilename;
     PackageUtils.uploadKey(key, path, Paths.get(solrHome));
-    PackageUtils.getJsonStringFromUrl(
+    PackageUtils.getJsonStringFromNonCollectionApi(
         solrClient, "/api/node/files" + path, new ModifiableSolrParams().add("sync", "true"));
   }
 
@@ -155,7 +159,8 @@ public class RepositoryManager {
       throws UnsupportedEncodingException, KeeperException, InterruptedException {
     if (zkClient.exists(PackageUtils.REPOSITORIES_ZK_PATH, true)) {
       return new String(
-          zkClient.getData(PackageUtils.REPOSITORIES_ZK_PATH, null, null, true), "UTF-8");
+          zkClient.getData(PackageUtils.REPOSITORIES_ZK_PATH, null, null, true),
+          StandardCharsets.UTF_8);
     }
     return "[]";
   }
@@ -178,7 +183,7 @@ public class RepositoryManager {
 
     try {
       // post the manifest
-      PackageUtils.printGreen("Posting manifest...");
+      printGreen("Posting manifest...");
 
       if (release.manifest == null) {
         String manifestJson = PackageUtils.getFileFromJarsAsString(downloaded, "manifest.json");
@@ -191,15 +196,15 @@ public class RepositoryManager {
       }
       String manifestJson = getMapper().writeValueAsString(release.manifest);
       String manifestSHA512 =
-          BlobRepository.sha512Digest(ByteBuffer.wrap(manifestJson.getBytes("UTF-8")));
+          Utils.sha512Digest(ByteBuffer.wrap(manifestJson.getBytes(StandardCharsets.UTF_8)));
       PackageUtils.postFile(
           solrClient,
-          ByteBuffer.wrap(manifestJson.getBytes("UTF-8")),
+          ByteBuffer.wrap(manifestJson.getBytes(StandardCharsets.UTF_8)),
           String.format(Locale.ROOT, "/package/%s/%s/%s", packageName, version, "manifest.json"),
           null);
 
       // post the artifacts
-      PackageUtils.printGreen("Posting artifacts...");
+      printGreen("Posting artifacts...");
       for (int i = 0; i < release.artifacts.size(); i++) {
         PackageUtils.postFile(
             solrClient,
@@ -214,7 +219,7 @@ public class RepositoryManager {
       }
 
       // Call Package API to add this version of the package
-      PackageUtils.printGreen("Executing Package API to register this package...");
+      printGreen("Executing Package API to register this package...");
       PackagePayload.AddVersion add = new PackagePayload.AddVersion();
       add.version = version;
       add.pkg = packageName;
@@ -233,7 +238,7 @@ public class RepositoryManager {
       add.manifestSHA512 = manifestSHA512;
 
       GenericSolrRequest request =
-          new GenericSolrRequest(SolrRequest.METHOD.POST, PackageUtils.PACKAGE_PATH) {
+          new GenericV2SolrRequest(SolrRequest.METHOD.POST, PackageUtils.PACKAGE_PATH) {
             @Override
             public RequestWriter.ContentWriter getContentWriter(String expectedType) {
               return new RequestWriter.StringPayloadContentWriter(
@@ -242,7 +247,7 @@ public class RepositoryManager {
           };
       try {
         NamedList<Object> resp = solrClient.request(request);
-        PackageUtils.printGreen("Response: " + resp.jsonStr());
+        printGreen("Response: " + resp.jsonStr());
       } catch (SolrServerException | IOException e) {
         throw new SolrException(ErrorCode.BAD_REQUEST, e);
       }
@@ -340,7 +345,7 @@ public class RepositoryManager {
   public boolean install(String packageName, String version) throws SolrException {
     SolrPackageRelease pkg = getLastPackageRelease(packageName);
     if (pkg == null) {
-      PackageUtils.printRed(
+      SolrCLI.printRed(
           "Package "
               + packageName
               + " not found in any repository. Check list of available packages via \"solr package list-available\".");
@@ -356,7 +361,7 @@ public class RepositoryManager {
                     collectionsDeployedIn.get(collection).equals(SolrPackageLoader.LATEST))
             .collect(Collectors.toList());
     if (!collectionsPeggedToLatest.isEmpty()) {
-      PackageUtils.printGreen(
+      printGreen(
           "Collections that will be affected (since they are configured to use $LATEST): "
               + collectionsPeggedToLatest);
     }
@@ -377,7 +382,7 @@ public class RepositoryManager {
               false,
               new String
                   [] {}); // Cluster level plugins don't work with peggedToLatest functionality
-      PackageUtils.printGreen(
+      printGreen(
           "Verifying version "
               + updatedPackage.version
               + " on "
@@ -385,7 +390,7 @@ public class RepositoryManager {
               + ", result: "
               + res);
       if (!res) {
-        PackageUtils.printRed("Failed verification after deployment");
+        SolrCLI.printRed("Failed verification after deployment");
         return false;
       }
     }
